Added method to review trades entered into the application. Trades collection changed to simplify the implementation. New Jar file generated and README Updated.